--- a/trunk/jsidplay2/src/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/libsidutils/sidid.cfg
@@ -45,7 +45,6 @@ AE ?? ?? E0 ?? B0 0B AD ?? ?? 3D ?? ?? F0 03 20 END
 
 Andrew_Colin
 A2 00 BD ?? ?? F0 6D FE ?? ?? D0 68 FE ?? ?? D0 63 BD ?? ?? 85 FE BD ?? ?? 85 FF A0 00 B1 FE 0A A8 B9 ?? ?? 9D ?? D4 END
-41 35 2C 30 31 2C 32 39 2C 46 45 2C 38 35 2C 30 31 2C 41 44 2C 30 30 2C 41 30 2C 44 30 2C 30 39 END
 
 Andrew_Rodger
 BC ?? ?? B1 ?? F0 ?? 10 ?? 9D 04 D4 C8 FE ?? ?? B1 ?? 9D 01 D4 C8 FE ?? ?? D0 ?? 9D END
@@ -92,10 +91,7 @@ ATMDS_3.x
 A0 69 99 ?? ?? 99 ?? ?? 88 10 F7 END
 
 Audial_Arts
-18 7D ?? ?? A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? A4 ?? C8 D0 ?? C9 82 D0 14 C8 B1 ?? 48 29 F0 8D ?? ?? 68 0A 0A 0A 0A 8D ?? ?? C8 D0 ?? C9 ?? B0 ?? 29 1F 0A 0A 0A 9D ?? ?? A9 ?? 85 ?? A9 END
-78 A9 00 9D ?? ?? CA 10 FA 20 ?? ?? B9 ?? ?? 8D ?? ?? B9 ?? ?? 8D ?? ?? A2 05 BD ?? ?? 9D ?? ?? A9 03 9D ?? ?? CA 10 F2 A2 02 20 ?? ?? CA 10 FA 60 A2 18 A9 00 9D 00 D4 CA 10 FA 60 A9 0F 09 10 END
-18 7D ?? ?? 85 FC 90 02 E6 FD A0 00 B1 FC 29 F0 4A 4A 4A 4A A8 B9 END
-18 7D ?? ?? A8 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? A4 ?? C8 B1 ?? 10 BD C9 82 D0 16 C8 B1 ?? 48 29 F0 8D ?? ?? 68 0A 0A 0A 0A 8D ?? ?? C8 B1 ?? 10 A3 C9 E0 B0 58 29 1F 0A 0A 0A DD ?? ?? F0 END
+BD ?? ?? 38 FD ?? ?? 9D ?? ?? B0 ?? DE ?? ?? 10 ?? A9 ?? 9D END
 
 Audial_Arts/Cody
 99 04 D4 BD ?? ?? 99 06 D4 FE ?? ?? E8 E0 03 END
@@ -144,6 +140,9 @@ B0 10 4A AC ?? ?? 8C ?? ?? AC ?? ?? 8C ?? ?? A8 C0 00 F0 0B 18 6E ?? ?? 6E ?? ??
 Bubble_Bus
 A0 00 AD ?? ?? 49 01 8D ?? ?? D0 0C B1 ?? 29 0F E6 ?? D0 0D E6 ?? D0 09 B1 ?? 29 F0 18 6A 6A 6A END
 
+Bubble_Bus/Love_R
+C9 00 F0 0F C9 FF F0 0B 8E 01 D4 8D 00 D4 A9 END
+
 Bug/NCI
 CE 41 03 D0 61 AD 42 03 8D 41 03 AD 12 C0 8D 04 D4 AD 13 C0 8D 0B D4 AD 14 C0 8D 12 D4 EE 40 03 END
 
@@ -151,8 +150,7 @@ Bug/NCI_Digi
 8D 18 D4 A2 17 A9 00 9D 00 D4 CA 10 FA A5 3C 48 AA A0 00 84 3C BD 00 0D 29 1F F0 03 4C 2A 0B BD 00 0E 85 2C BD 00 13 85 2B F0 09 A0 B6 88 D0 FD END
 
 Burgstaller_B
-60 A9 ?? 8D 17 D4 A9 ?? 8D 18 D4 A2 02 BD END
-90 03 FE ?? ?? BD ?? ?? F0 38 B1 FD 4A 90 25 4A B0 06 7D END
+C8 B1 ?? 48 C8 B1 ?? BC ?? ?? 99 06 D4 68 99 05 D4 BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 BD ?? ?? 99 03 D4 END
 
 Pretzel/Soundscape
 48 29 F0 4A 4A 4A 4A 9D 60 03 68 29 0F 9D 42 03 END
@@ -219,6 +217,9 @@ B1 13 A0 36 84 01 85 17 4A 4A 4A 4A 8D 18 D4 A9 CD 8D 18 03 A4 11 AD 0D DD A5 10
 Comer/Sample_Studio
 A0 00 A2 30 86 01 B1 02 A2 37 86 01 85 ?? 4A 4A 4A 4A 8D 18 D4 A2 ?? CA D0 FD A5 END
 
+Commodore/Andy_Finkel
+C9 FD D0 08 C8 B1 ?? ?? ?? 4C ?? ?? C9 FE D0 0C C8 B1 END
+
 CRD_Tracker
 C0 80 D0 04 85 57 A9 00 85 26 E8 86 5E 88 84 65 18 A5 57 65 26 8D 16 D4 85 57 A2 00 20 END
 
@@ -230,12 +231,7 @@ Cyberbrain_Digi
 D0 D0 FB 88 CA D0 F7 A9 41 8D 04 D4 A0 B1 88 D0 END
 
 Cyberlogic_SoundStudio
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 AND 8D ?? ?? 60 A2 00 A8 ?? ?? ?? ?? ?? 9D ?? ?? ?? ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 98 18 69 ?? E8 E0 03 90 D5 60 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 8D ?? ?? 60 AND 9D ?? ?? A9 00 9D ?? ?? A9 ?? 9D AND 4C ?? ?? CE ?? ?? AC ?? ?? 4C ?? ?? AD ?? ?? D0 DE AND A5 39 48 A5 3A 48 AD ?? ?? 10 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 60 8D ?? ?? 60 A8 A2 00 98 48 B9 ?? ?? C9 40 B0 20 9D ?? ?? B9 ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? BC ?? ?? 99 04 D4 68 18 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 60 8D ?? ?? 60 A2 00 A8 B9 ?? ?? C9 40 B0 1C 9D ?? ?? B9 ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 98 18 69 ?? E8 E0 03 90 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 8D ?? ?? 60 A2 00 18 A8 ?? ?? ?? 30 21 9D ?? ?? ?? ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? A9 ?? 9D ?? ?? 98 69 ?? E8 E0 END
-A9 08 9D 00 D4 A9 00 9D 00 D4 CA 10 F3 60 4C ?? ?? 9D ?? ?? A9 00 9D ?? ?? A9 ?? 9D ?? ?? 4C ?? ?? CE ?? ?? AC ?? ?? 4C ?? ?? A5 39 48 A5 3A 48 END
+9D ?? ?? B0 ?? DE ?? ?? ?? ?? ?? 4A 4A 4A 4A DD ?? ?? D0 ?? A9 ?? 9D END
 
 CyberTracker
 1E BC 46 10 BD B7 10 99 06 D4 A9 00 9D B4 10 99 END
@@ -243,12 +239,7 @@ CyberTracker_exe
 60 4C F8 49 ?? ?? ?? ?? ?? ?? ?? ?? ?? 4C 84 4A 4C ED 4B END
 
 Cycleburner_Digi
-99 ?? ?? 8D 18 D4 10 5A 88 C0 FF F0 03 4C ?? ?? CE ?? ?? D0 6D 8D ?? ?? B9 ?? ?? 4A 4A 4A 4A 8D ?? ?? B9 ?? ?? 4A 4A 4A 4A 18 69 00 4A 8D 18 D4 END
-A9 00 A2 18 9D FF D3 CA D0 FA AND 85 ?? 8D 0E DD 8D 05 DD A9 END
-A9 00 A2 18 9D FF D3 CA D0 FA AND 8D 0E DD 8D 05 DD A9 F0 8D 06 D4 A9 END
-A9 00 A2 18 9D FF D3 CA D0 FA 85 FD 8D 0E DD 8D 05 DD 8D ?? ?? A9 ?? A0 ?? 9D ?? ?? E8 D0 FA EE END
-A9 00 A2 18 9D FF D3 CA D0 FA 85 ?? 85 ?? 8D 0E DD 8D 05 DD A9 ?? A8 9D ?? ?? E8 D0 FA EE END
-A9 00 A0 18 99 FF D3 88 D0 FA 85 ?? 85 ?? 8D 0E DD 8D 05 DD A2 ?? 8E ?? ?? A9 F0 8D 06 D4 20 END
+18 ?? FF D3 ?? D0 AND 8D 0E DD 8D 05 DD AND A9 F0 8D 06 D4 END
 
 Dane
 AA 29 E0 C9 80 D0 12 8A 29 10 8D END
@@ -265,10 +256,9 @@ Dave_Lowe
 00 D4 60 A0 00 B1 ?? C8 11 ?? F0 END
 
 Dave_Warhol
-85 ?? 0A 0A 0A AA A0 00 BD ?? ?? F0 30 99 ?? 00 END
-D0 0C BD ?? ?? A8 A9 FE 39 ?? ?? 99 ?? ?? CA 10 E7 60 A0 00 B1 END
-AD ?? ?? D0 1D AD ?? ?? 8D 18 D4 F0 15 20 ?? ?? A2 00 20 ?? ?? A2 02 20 ?? ?? A2 04 20 ?? ?? 20 ?? ?? 60 BD ?? ?? 1D ?? ?? F0 F7 18 BD END
-C9 12 B0 5A 48 48 A8 8A 18 79 END
+6D ?? ?? A8 B9 ?? ?? F0 ?? 38 E9 01 99 END
+29 03 AA 98 18 6A 6A 29 0F 8D ?? ?? 2C ?? ?? 50 ?? A9 ?? 38 E9 01 END
+46 ?? 46 ?? 46 ?? 29 07 C9 07 90 ?? A5 ?? C9 END
 
 David_Dunn
 AD ?? ?? 8C 04 D4 8D 04 D4 END
@@ -350,7 +340,6 @@ A9 00 8D ?? ?? 8D 04 D4 8D 0B D4 AD ?? ?? D0 03 8D 12 D4 60 A2 00 8E ?? ?? 8E ??
 
 Electro_Sound
 EE ?? ?? AD ?? ?? CD FF 02 D0 0E 20 ?? ?? A9 END
-C9 B0 D0 05 A9 30 4C 15 48 A2 00 DD E7 57 F0 15 E8 E0 19 D0 F6 A2 00 DD CE 57 F0 05 E8 E0 19 D0 END
 
 Electronic_Speech_Sys
 4A 8D 18 D4 CD 0D DD C6 ?? F0 05 END
@@ -366,7 +355,6 @@ AA A9 00 A0 ?? 99 ?? ?? 88 D0 FA A0 1C 99 00 D4 88 10 FA A9 02 8D END
 
 EMS_V7.03
 8D ?? ?? A0 16 A9 00 99 00 D4 88 10 FA A9 ?? 8D 04 D4 8D 0B D4 8D 12 D4 60 END
-8D A9 ?? 8D ?? ?? A9 01 8D ?? ?? 8D ?? ?? AD ?? ?? 29 0F D0 F9 60 A2 END
 
 EMS/Odie
 B9 ?? ?? AC ?? ?? 99 06 D4 29 F0 4A 4A 4A 4A 99 05 D4 END
@@ -375,13 +363,9 @@ BD ?? ?? 85 F8 BD ?? ?? 85 F9 BC ?? ?? B1 F8 C9 FF D0 ?? C8 B1 F8 END
 B9 ?? ?? 85 F8 B9 ?? ?? 85 F9 BC ?? ?? B1 F8 C9 FF D0 ?? C8 B1 F8 END
 BC ?? ?? BD ?? ?? 85 F8 BD ?? ?? 85 F9 B1 F8 C9 FE D0 END
 BC ?? ?? BD ?? ?? 85 F8 BD ?? ?? 85 F9 B1 F8 C9 F0 90 ?? 29 0F 9D END
-BC ?? ?? BD ?? ?? 85 F8 BD ?? ?? 85 F9 B1 F8 C9 C0 90 ?? 29 1F 49 1F 8D END
 
 Odie/Cosine
 AE ?? ?? AC ?? ?? BD ?? ?? 18 7D ?? ?? 9D ?? ?? 99 02 D4 B0 01 60 FE ?? ?? BD ?? ?? 99 03 D4 18 DD ?? ?? B0 01 60 49 0F END
-
-ElectronicArts
-60 48 29 1F 18 69 01 9D ?? ?? 68 A0 FE 29 20 F0 02 END
 
 Entropy_Editor
 B1 FB C9 40 90 0A 0A 0A 09 03 8D END
@@ -393,13 +377,10 @@ Extra_Sound
 C9 FF D0 01 60 C9 FE D0 0E C8 B1 FB 9D END
 
 FAME
-9D ?? ?? BC ?? ?? B1 ?? 18 7D ?? ?? 9D 01 D4 A9 00 9D 00 D4 4C ?? ?? BD ?? ?? F0 03 4C ?? ?? BC ?? ?? B9 ?? ?? 30 BB F0 08 BD ?? ?? F0 12 DE ?? ?? BD ?? ?? 9D 00 D4 BD ?? ?? 9D 01 D4 4C END
-90 05 A9 08 99 04 D4 50 05 A9 0F 99 06 D4 BD ?? ?? 9D ?? ?? A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? E0 00 D0 18 A9 00 F0 09 30 12 A9 80 8D ?? ?? A9 00 8D ?? ?? 8D ?? ?? A9 00 8D ?? ?? A9 FF END
-C9 7E 90 1B C9 7F F0 0A C8 B1 ?? 9D ?? ?? C8 4C ?? ?? 8E ?? ?? C8 B1 ?? 8D ?? ?? C8 4C ?? ?? 29 1F 9D ?? ?? C8 4C ?? ?? C9 A0 B0 09 29 1F 9D ?? ?? C8 4C ?? ?? C9 C0 B0 ?? C8 7D ?? ?? 0A 0A 0A END
-C8 B1 50 24 52 50 4B 84 52 29 07 85 53 B1 50 4A 4A 4A 29 07 18 7D END
-90 03 B9 ?? ?? A8 B1 02 24 04 30 89 9D ?? ?? 85 05 29 07 9D ?? ?? C8 B1 02 06 05 24 05 90 11 70 05 10 0A 4C ?? ?? 9D ?? ?? C8 4C ?? ?? 4C ?? ?? 9D ?? ?? 4A 4A 4A 4A 29 07 9D ?? ?? C8 98 9D END
-4A 4A 4A 29 07 85 04 B5 23 4A 4A 4A 29 0F END
-4C ?? ?? AD ?? ?? 8D 15 D4 AD ?? ?? 8D 16 D4 60 A9 ?? 8D 18 D4 A9 ?? 8D 17 D4 AE ?? ?? F0 E4 CE ?? ?? 10 4F BD ?? ?? 29 F0 09 0F 8D ?? ?? BD ?? ?? 0A 0A 0A 0A 85 52 AD ?? ?? 29 0F 05 52 8D  END
+B9 ?? ?? FD ?? ?? 85 ?? A9 ?? 85 ?? A2 ?? 06 ?? 26 ?? 26 ?? 38 A5 ?? E5 ?? 90 ?? 85 ?? E6 ?? CA D0 END
+0A 85 ?? 0A 18 65 ?? ?? ?? ?? BD END
+26 ?? 26 ?? 38 A5 ?? E5 ?? A8 A5 ?? E5 ?? 90 ?? 84 ?? 85 ?? E6 ?? CA D0 ?? A2 END
+C9 ?? B0 ?? 29 1F 0A 0A 0A 9D ?? ?? C8 4C END
 
 Faith_Sample_Mixer
 60 A0 00 A9 34 85 01 B1 ?? A2 37 86 01 85 ?? 4A 4A 4A 4A 8D 18 D4 A2 ?? CA D0 FD A5 END
@@ -452,26 +433,17 @@ C8 B1 FE 8D ?? ?? C8 B1 FE 48 4A 4A 4A 4A 8D END
 B1 FE C9 B0 B0 0D C9 70 90 09 ?? ?? ?? ?? ?? ?? ?? B1 FE C9 6F D0 ?? A0 00 94 2D END
 
 Geir_Tjelta/SIDSys18.4
-A9 ?? 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 ?? A8 09 ?? 8D 18 D4 A9 00 F0 1B 88 C0 10 90 09 8E ?? ?? C9 80 B0 ?? 90 0D CE ?? ?? 10 08 29 7F 8D ?? ?? 8C ?? ?? A2 0E CE ?? ?? 10 08 AD ?? ?? 8D END
-A9 08 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 ?? A8 09 ?? 8D 18 D4 A9 ?? F0 1B C8 C0 10 90 09 8E END
-C8 B1 FC C9 63 D0 0A C8 B1 FC 0A E9 01 9D ?? ?? C8 B1 FC C9 60 9D END
+4A 4A 4A 4A A8 B9 ?? ?? 8D ?? ?? A5 ?? A4 ?? 10 ?? 4A 66 ?? 4A 66 ?? 4A 66 ?? 4A 66 END
 
 Geir_Tjelta/SIDSys18.6
 99 06 D4 B9 ?? ?? 10 DF 8D ?? ?? 68 29 0F 8D ?? ?? A9 ?? 8D ?? ?? 8D ?? ?? A9 ?? 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 ?? 30 F0 A9 ?? A8 09 ?? ?? 18 D4 A9 ?? F0 1C 88 C0 10 90 0A A0 00 8C ?? ?? A8 END
 
 Geir_Tjelta/SIDDuzz'It
-CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? CE ?? ?? A9 ?? 30 15 A8 B9 END
-C9 C0 B0 17 C9 80 29 20 F0 0C 90 02 A9 END
-A9 ?? 29 7F F0 79 0A 0A A8 A9 02 D0 25 A9 02 8D ?? ?? A9 B0 8D ?? ?? B0 19 A2 ?? BD ?? ?? 48 0A 0A 0A 0A 8D ?? ?? 68 29 F0 8D ?? ?? B9 ?? ?? 8D END
-8D 16 D4 A9 ?? 09 AND 8D 17 D4 A9 ?? 09 ?? ?? 18 D4 CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE ?? ?? A9 END
-8D 16 D4 A9 ?? 09 AND 8D 17 D4 A9 ?? 09 ?? 8D 18 D4 A9 00 F0 1B CE ?? ?? 10 16 8D ?? ?? CE ?? ?? 10 0E A9 ?? 8D ?? ?? 8D 04 D4 8D 0B D4 8D 12 D4 CE ?? ?? 10 17 CE ?? ?? CE END
-8D ?? ?? AA CA 8E ?? ?? A9 ?? 8D ?? ?? 85 FB A9 ?? 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 ?? A8 09 ?? 8D 18 D4 A9 ?? F0 1B 88 C0 10 90 09 8E ?? ?? C9 80 B0 DA 90 0D CE ?? ?? 10 08 29 7F 8D END
-90 0A 18 79 ?? ?? C9 ?? 90 1F B0 08 38 F9 ?? ?? C9 ?? B0 15 BE ?? ?? 10 03 CE ?? ?? CE ?? ?? D0 03 8E ?? ?? A2 90 8E ?? ?? 8D ?? ?? 8D 16 D4 A9 ?? 09 F0 8D 17 D4 A9 ?? 09 ?? 8D END
-C9 80 29 20 F0 ?? 90 02 A9 01 AND 99 06 D4 A9 0F 99 05 D4 A9 FE 9D ?? ?? BD ?? ?? 30 07 0A 0A 0A 0A 9D ?? ?? A9 FF 9D END
-8D 16 D4 A9 ?? 09 ?? 8D 17 D4 A9 ?? 09 ?? 8D 18 D4 AD ?? ?? F0 ?? CE ?? ?? 10 ?? CE ?? ?? CE ?? ?? CE AND A9 ?? 30 15 A8 B9 END
-9D ?? ?? A8 B9 ?? ?? 9D ?? ?? BD ?? ?? D0 03 4C ?? ?? 9D ?? ?? BC ?? ?? BD ?? ?? C9 01 B9 ?? ?? 90 05 29 0F 1D ?? ?? 85 FF 29 F0 9D ?? ?? 09 0F 9D 06 D4 BD ?? ?? 3D ?? ?? 9D 04 D4 B9 ?? ?? 9D END
-D0 03 BD ?? ?? AA 0A 0A 0A 0A 8D ?? ?? 8A 29 F0 8D ?? ?? B9 ?? ?? 8D ?? ?? B9 ?? ?? D0 06 AD END
-BD ?? ?? B0 ?? 30 07 0A 0A 0A 0A 9D ?? ?? A9 FF 9D ?? ?? 9D ?? ?? BC ?? ?? B9 ?? ?? 0A 30 19 29 END
+A2 ?? BD ?? ?? 48 0A 0A 0A 0A 8D ?? ?? 68 29 F0 8D ?? ?? B9 ?? ?? ?? ?? ?? B9 ?? ?? 48 0A 0A 0A 0A AA 8E ?? ?? 68 29 F0 END
+B9 ?? ?? 48 4A 4A 4A 4A ?? ?? ?? ?? 68 29 0F CD ?? ?? 90 ?? 8D ?? ?? A9 END
+A2 ?? DE ?? ?? 10 ?? FE ?? ?? FE ?? ?? A0 ?? BD ?? ?? 3D ?? ?? 1D ?? ?? 99 04 D4 END
+B9 ?? ?? C9 80 29 7F 9D ?? ?? 6A 9D ?? ?? B9 ?? ?? 29 7F 85 ?? BD ?? ?? 4A 18 65 FE C9 60 90 ?? 29 1F 09 60 END
+9D ?? ?? AC ?? ?? A9 ?? 1D ?? ?? 99 06 D4 A9 ?? 1D ?? ?? 99 04 D4 BC ?? ?? B9 ?? ?? 29 1F 0A 9D END
 
 Geir_Tjelta_digi_1
 8D 18 D4 4C ?? ?? 24 ?? 30 ?? 4A 4A 4A 4A 4C END
@@ -520,7 +492,6 @@ Graffity/Grabowsky
 
 GRG
 48 29 F0 95 5C 68 29 0F 95 END
-9D 05 D4 68 9D 06 D4 B4 ?? B9 ?? ?? F0 0A 10 0E END
 F0 0A DE 61 03 D0 05 A9 FE 9D 64 03 BD 55 03 10 END
 A0 00 B1 ?? C9 C0 90 09 29 3F 95 ?? C8 B1 ?? 10 END
 
@@ -784,6 +755,9 @@ LFT
 4C ?? ?? AD ?? ?? F0 21 CE ?? ?? D0 1C 20 ?? ?? 0A AA BD ?? ?? 85 92 BD ?? ?? 85 93 6C 92 00 20 ?? ?? C9 00 F0 E7 8D END
 4C ?? ?? C9 08 90 0A A9 07 8D ?? ?? A9 FF 8D END
 
+Llamasoft/James_Lisney
+18 69 02 85 ?? A5 ?? 69 00 85 ?? A0 00 8C 04 D4 B1 END
+
 Loadstar_SongSmith
 29 FE 8D 04 D4 4C AD CC C9 00 D0 2F AC 5D CF B1 8E C9 C8 F0 18 38 E9 01 0A A8 B9 BB CE 8D 00 D4 END
 
@@ -866,19 +840,24 @@ Martin_Walker
 Martin_Wheeler
 A2 02 A9 00 9D ?? ?? 9D ?? ?? BD ?? ?? A8 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 END
 
+Masteller
+CE ?? ?? D0 ?? A9 ?? 8D 04 D4 B1 39 END
+
 Master_Composer
 0A 2E ?? ?? CA D0 F9 18 69 ?? 8D ?? ?? AD ?? ?? 69 ?? 8D ?? ?? 4C ?? ?? C9 40 F0 26 C9 03 D0 04 A9 00 F0 1A C9 08 D0 04 A9 03 D0 12 C9 3B D0 04 A9 02 D0 0A C9 38 D0 04 A9 01 D0 02 A9 ?? 8D END
 
 Mat/MDA
 29 80 C9 80 D0 1E A9 05 8D ?? ?? AD ?? ?? 8D 05 D4 AD ?? ?? 8D 06 D4 A9 00 8D ?? ?? A9 81 8D 04 D4 4C ?? ?? A9 ?? 8D ?? ?? 8D 03 D4 A9 C0 8D 02 D4 8D ?? ?? A9 ?? 8D 04 D4 A9 01 8D ?? ?? AD END
 A9 00 8D 3D 03 AD 88 03 8D 3C 03 AD 3C 03 18 69 END
+
 Symphonica/MDA
 18 69 ?? AA BD ?? ?? 29 F0 4A 4A 4A 4A AA BD ?? ?? 8D ?? D4 AE ?? ?? BD ?? ?? 8D ?? D4 BD END
 
-Mat/MDA_digi
+SoundBox/MDA
 B5 FD 48 CA 10 FA A9 00 8D 21 15 A2 02 BD C0 14 D0 05 DE C3 14 30 03 4C 21 17 BC C9 14 B9 40 11 END
+
+Mat/MDA_digi
 DC 29 10 C9 00 D0 F7 78 A9 00 8D 1A D0 A9 FF 8D 0D DC AD 0D DC A9 37 85 01 A9 EA A2 31 8D 15 03 8E 14 03 A9 7F 8D 0D DD A9 47 8D 18 03 A9 FE 8D 19 03 A9 00 8D 18 D4 END
-A0 00 8D 04 DD 8C 05 DD 8C 06 DD 8C 07 DD A9 11 8D 0E DD A9 51 8D 0F DD AD 0D DD A9 82 8D 0D DD A9 00 8D ?? ?? A9 12 8D ?? ?? A9 ?? 85 01 END
 
 Matt_Furniss
 0A 0A 0A 0A 8D 10 D4 AD ?? ?? 4A 4A 4A 4A 8D 11 D4 AD ?? ?? 29 01 D0 0C AD ?? ?? 8D 13 D4 AD END
@@ -889,6 +868,9 @@ FE ?? ?? D0 ?? C9 FB 90 20 C9 FB D0 18 A9 01 9D ?? ?? C8 FE ?? ?? B1 END
 Matthias_Weber
 A0 00 84 FB A0 00 B1 FB A2 00 0A 69 00 0A END
 0A A8 B9 ?? ?? 85 FB C8 B9 ?? ?? 85 FC AD ?? ?? 0A A8 B1 FB F0 DB 8D ?? ?? C8 B1 FB AA BD END
+
+Maxx_Digi
+A9 34 85 01 B1 D1 4A 4A 4A 4A 09 10 85 DA END
 
 Mcee_digi
 48 8A 48 98 48 E6 FC AND 4A 4A 4A END
@@ -906,7 +888,6 @@ BD ?? ?? C9 00 F0 1D DE ?? ?? A9 ?? 9D 04 D4 BD ?? ?? 18 49 FF 18 69 0E 9D 01 D4
 9D 01 D4 A9 ?? 9D 04 D4 6C ?? ?? BD ?? ?? F0 03 DE ?? ?? 9D 01 D4 A9 ?? 9D 04 D4 6C ?? ?? BD ?? ?? F0 03 DE ?? ?? 9D 01 D4 A9 ?? 9D 04 D4 6C ?? ?? BD ?? ?? 18 69 10 9D ?? ?? BD ?? ?? 69 00 9D END
 20 ?? ?? 60 A8 B9 ?? ?? 9D 00 D4 9D ?? ?? B9 ?? ?? 9D 01 D4 9D ?? ?? A0 01 B1 BB A8 A9 00 9D 04 D4 9D 05 D4 9D 06 D4 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? B9 ?? ?? 9D 05 D4 A9 ?? 9D 06 D4 B9 80 END
 A9 00 9D 04 D4 9D 05 D4 9D 06 D4 AD ?? ?? A8 B9 ?? ?? 9D 00 D4 B9 ?? ?? 9D 01 D4 AD ?? ?? 9D 05 D4 A9 ?? 9D 06 D4 A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 60 AD END
-BD ?? ?? C9 00 F0 1D DE ?? ?? A9 ?? 9D 04 D4 BD ?? ?? 18 49 FF 18 69 0E 9D 01 D4 A9 ?? 9D 00 D4 18 6C ?? ?? 20 ?? ?? BD ?? ?? 9D 01 D4 A9 00 9D 00 D4 A9 11 9D 04 D4 18 6C ?? ?? BD ?? ?? C9 00 END
 
 MicroRhythm
 B1 FB 29 0F 8D 18 D4 AE ?? ?? CA D0 FD B1 FB 4A END
@@ -944,7 +925,6 @@ C9 FF D0 17 A9 00 9D ?? ?? BD ?? ?? F0 05 DE ?? ?? 10 END
 C9 FF D0 0E A9 00 95 ?? B5 ?? F0 04 D6 ?? 10 END
 C9 FF F0 03 4C ?? ?? DE ?? ?? F0 ?? A0 00 94 END
 C9 60 B0 03 4C ?? ?? C9 FF D0 ?? A9 00 END
-C9 5F B0 03 4C ?? ?? C9 FD D0 ?? C8 B1 ?? 18 7D ?? ?? 9D ?? ?? C8 B1 END
 4C ?? ?? C6 ?? A4 ?? BD ?? ?? 86 ?? 0A 0A 0A AA 8E ?? ?? BD ?? ?? 85 ?? BD ?? ?? 25 ?? 99 04 D4 END
 
 MoN/FutureComposer
@@ -1317,20 +1297,13 @@ SynC
 0A 0A 0A A8 A2 00 8A 9D ?? ?? E8 E0 BD D0 F8 A2 00 9D ?? ?? E8 E0 ?? D0 F8 A2 00 B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? A9 ?? 9D 04 D4 9D ?? ?? A9 00 AND 9D ?? ?? 9D ?? ?? A9 ?? 9D ?? ?? A9 FF 9D ?? ?? A9 80 8D ?? ?? A9 01 9D ?? ?? 9D 70 10 C8 C8 END
 
 System6581
-99 E6 D4 A0 01 B1 FB A4 FD 99 E5 D4 29 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A0 06 B1 FB 4A 9D ?? ?? C8 B1 FB A0 01 END
-99 06 D4 A0 01 B1 FB A4 FD 99 05 D4 29 00 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A0 06 B1 FB 4A 9D ?? ?? C8 B1 FB A0 01 END
-9D ?? ?? 0A 0A 0A 0A A4 FD 99 E2 D4 BD ?? ?? 4A 4A 4A 4A 99 E3 D4 BD ?? ?? F0 29 A8 BD ?? ?? 4A 4A 4A 4A DD ?? ?? D0 0A BD ?? ?? 29 0F 9D ?? ?? 10 03 FE ?? ?? 98 18 7D ?? ?? A8 B9 ?? ?? 8D END
-9D ?? ?? 0A 0A 0A 0A A4 FD 99 02 D4 BD ?? ?? 4A 4A 4A 4A 99 03 D4 BD ?? ?? F0 29 A8 BD ?? ?? 4A 4A 4A 4A DD ?? ?? D0 0A BD ?? ?? 29 0F 9D ?? ?? 10 03 FE ?? ?? 98 18 7D ?? ?? A8 B9 ?? ?? 8D END
-26 0A 0A 0A 0A 90 01 ?? 18 69 ?? 90 01 ?? ?? ?? ?? 85 FB AND AD ?? ?? 38 FD ?? ?? 90 07 A9 01 9D ?? ?? D0 05 A9 81 9D ?? ?? BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AD ?? ?? 9D END
+BD ?? ?? 4A 4A 4A 4A DD ?? ?? D0 ?? BD ?? ?? 29 0F 9D ?? ?? 10 ?? FE END
 
 Tamas_Revbiro
 0E D4 C8 C0 0B D0 F6 60 A2 00 A9 00 9D 00 D4 END
 
 TBB/SideB
-99 01 D4 BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? 4C ?? ?? B9 ?? ?? A4 ?? 99 04 D4 BC ?? ?? B9 ?? ?? 85 ?? B9 ?? ?? A4 ?? 99 00 D4 9D ?? ?? A5 ?? 99 01 D4 9D ?? ?? A5 ?? 29 40 9D ?? ?? F0 END
-29 1F 9D ?? ?? C8 B1 FB 10 1B C9 BF B0 0D 29 1F 0A 0A 0A 8D ?? ?? C8 B1 FB 10 0A 29 3F 9D ?? ?? C8 B1 FB D0 00 85 FB C8 98 ?? ?? 10 A4 FB B9 ?? ?? 9D ?? ?? 85 F9 B9 ?? ?? 9D ?? ?? 85 FA BC END
-A6 FE A9 00 9D ?? ?? 9D ?? ?? 9D ?? ?? A5 F9 29 20 D0 16 9D ?? ?? 99 02 D4 9D ?? ?? A6 FD BD ?? ?? 99 03 D4 A6 FE 9D ?? ?? A5 F9 29 10 9D END
-86 F8 BD ?? ?? 85 F9 A8 BD ?? ?? F0 0B BD ?? ?? D0 03 4C ?? ?? 4C ?? ?? 99 04 D4 99 05 D4 99 06 D4 9D ?? ?? FE ?? ?? BD ?? ?? 85 FA BD ?? ?? 85 FB BC END
+BD ?? ?? 38 FD ?? ?? DD ?? ?? F0 ?? D0 ?? A4 ?? B9 ?? ?? A4 ?? 99 04 D4 FE ?? ?? 4C ?? ?? BD ?? ?? DD ?? ?? F0 END
 
 TFMX
 A0 40 B1 ?? 8D ?? ?? A0 20 B1 ?? 8D ?? ?? A0 80 B1 ?? 8D ?? ?? A0 A0 B1 ?? 8D END
@@ -1369,18 +1342,15 @@ TrackPlayer_V3.0
 A2 ?? 20 ?? ?? CE ?? ?? A2 00 20 ?? ?? A2 07 20 ?? ?? A2 0E 20 ?? ?? AD ?? ?? 8D 16 D4 AD ?? ?? 0D ?? ?? 8D 17 D4 AD ?? ?? 8D 18 D4 AD ?? ?? F0 01 60 AD ?? ?? 8D ?? ?? 60 BD ?? ?? C9 02 F0 01 END
 
 Trident/Active
-B1 FB 9D ?? ?? C8 B1 FB D0 60 9D ?? ?? DE ?? ?? 10 5C 9D ?? ?? BC ?? ?? BD ?? ?? 85 FB BD ?? ?? 85 FC B1 FB C9 FF D0 0D A0 00 8C ?? ?? 8C 17 D4 A9 ?? 8D ?? ?? C9 FE D0 04 C8 B1 FB A8 C9 FD D0 END
-AD ?? ?? F0 13 CE ?? ?? 10 0E AD ?? ?? 8D ?? ?? AD ?? ?? F0 03 CE ?? ?? AD ?? ?? 8D ?? ?? 20 ?? ?? 20 ?? ?? 20 ?? ?? 20 ?? ?? AD ?? ?? 8D 17 D4 AD ?? ?? 29 F0 0D ?? ?? 8D 18 D4 60 END
-AD ?? ?? F0 0B AD ?? ?? 8D ?? ?? A9 00 8D ?? ?? 20 ?? ?? A2 ?? BC ?? ?? BD ?? ?? 99 00 D4 CA 10 F4 AD END
-9D ?? ?? A5 FB 29 07 F0 12 0A 0A 0A 0A 09 0F 8D 18 D4 9D ?? ?? BD ?? ?? 8D 17 D4 B9 ?? ?? 29 0F END
+0A 90 ?? 30 ?? 9D ?? ?? C8 B1 ?? 0A 90 ?? 4A 29 3F 9D ?? ?? C8 B1 ?? 0A 9D ?? ?? C8 98 9D END
+0A 85 ?? 0A 18 65 ?? A8 A9 ?? AA 9D 00 D4 END
+C8 B1 ?? C9 FF D0 ?? A0 ?? C9 FE F0 ?? C9 ?? D0 ?? C8 B1 ?? 0A A8 98 9D ?? ?? 60 END
 
 Tim_Gibson
 29 60 4A 4A 4A 4A 4A AA BD END
 
 Tiny/Sound_Images
-A9 00 9D 00 D4 CA 10 FA A9 0F 8D 18 D4 60 60 AD ?? ?? D0 06 AD ?? ?? 8D ?? ?? AD ?? ?? F0 EF 48 20 ?? ?? 68 C9 ?? 90 01 60 8D ?? ?? 0A 0A 0A AA A9 0F 8D 18 D4 8D ?? ?? A0 00 8C ?? ?? 8C END
-CE ?? ?? D0 03 4C ?? ?? 20 ?? ?? 4C ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? BD ?? ?? 10 03 20 ?? ?? BD ?? ?? 8D ?? ?? A9 ?? D0 AND DE ?? ?? F0 ?? A9 ?? 29 04 F0 03 20 ?? ?? 20 END
-F0 0B DE ?? ?? 10 29 BD ?? ?? 9D ?? ?? BD ?? ?? F0 0F BD ?? ?? 18 7D ?? ?? 90 12 FE ?? ?? 4C ?? ?? BD ?? ?? 38 FD ?? ?? B0 03 DE ?? ?? 9D ?? ?? 60 END
+B1 ?? 10 ?? A8 A9 ?? 9D ?? ?? 98 29 7F 18 7D ?? ?? 4C END
 
 Twynn
 8D ?? ?? B9 ?? ?? 8D ?? ?? A9 01 8D ?? ?? A9 00 8D ?? ?? 8D ?? ?? 8D 16 D4 8D 17 D4 8D ?? ?? A9 0F 8D ?? ?? 60 AD ?? ?? D0 04 8D 18 D4 60 A5 02 48 A5 03 48 CE ?? ?? 10 08 AD ?? ?? 8D ?? ?? D0 END
@@ -1560,6 +1530,9 @@ E6 FB D0 02 E6 FC ?? A0 00 B1 FB C9 FF F0 28 END
 
 ?Macsen
 A9 ?? 8D 04 D4 EE 04 D4 A0 END
+
+?Konami
+85 FC A0 00 B1 FB 8D ?? ?? C9 FF D0 03 4C ?? ?? C9 FD D0 03 4C ?? ?? C8 B1 FB 8D END
 
 Digi-Organizer
 4C E6 91 AD 82 90 0A A8 B9 01 92 29 7F 20 C7 91 END
