--- a/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/gamebase/GameBase.properties
@@ -15,3 +15,8 @@ CATEGORY=Category
 MUSICIAN=Musician
 MUSIC_GET=Play Music
 COMMENT=Comment
+
+CONFIGURATION=Configuration By Hand
+BASE_DIR=Base dir:
+BROWSE=Browse...
+DOWNLOAD=Download
