--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -5,7 +5,7 @@ HVSC Dir=
 ;Base directory of the Compute's Gazette SID Collection
 CGSC Dir=
 ;Enable/Disable configured Songlength Database
-EnableDatabase=1
+EnableDatabase=true
 Default Play Length=
 Default Record Length=
 ; SOASC download URLs
@@ -13,7 +13,7 @@ SOASC_6581R2=http://ftp.df.lth.se/pub/media/soasc/soasc_mp3{0}_T{1,number,00}.si
 SOASC_6581R4=http://ftp.df.lth.se/pub/media/soasc/soasc_mp3{0}_T{1,number,00}.sid_MOS6581R4.mp3
 SOASC_8580R5=http://ftp.df.lth.se/pub/media/soasc/soasc_mp3{0}_T{1,number,00}.sid_CSG8580R5.mp3
 ; proxy settings
-EnableProxy=0
+EnableProxy=false
 ProxyHostname=
 ProxyPort=80
 
