--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -1,13 +1,17 @@
 [SIDPlay2]
 ;The provided string must be a fully qualified path including filename to the location of the songlength database file. Short cuts of '~' for meaning home directory are not yet supported.
-;Base directory of the High Voltage SID Collection
+;Base directory of the High Voltage SID Collection (base directory of the song length database as well)
 HVSC Dir=
 ;Base directory of the Compute's Gazette SID Collection
 CGSC Dir=
-;Enable/Disable configured Songlength Database
+;Enable/Disable song length database
 EnableDatabase=true
+;User defined song length will always be used (overrides song length database entries)
+User Play Length=
+;Default song length (will be used, if the song length database does not contain related entries)
 Default Play Length=
-Default Record Length=
+;Loop a tune (turn on to repeat a single tune)
+Loop=false
 ; SOASC download URLs
 SOASC_6581R2=http://ftp.df.lth.se/pub/media/soasc/soasc_mp3{0}_T{1,number,00}.sid_MOS6581R2.mp3
 SOASC_6581R4=http://ftp.df.lth.se/pub/media/soasc/soasc_mp3{0}_T{1,number,00}.sid_MOS6581R4.mp3
