--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
@@ -150,3 +150,7 @@ CSDB=CSDb
 CODEBASE64=Codebase 64
 REMIX_KWED_ORG=Remix.Kwed.Org
 SID_OTH4_COM=Sid.Oth4.Com
+C64_SK=C64.sk
+FORUM64_DE=Forum64.De
+LEMON64_COM=Lemon64.Com
+JSIDPLAY2=JSIDPlay2 Sourcecode
