--- a/trunk/jsidplay2/src/main/resources/ui/webview/WebView.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/webview/WebView.properties
@@ -2,6 +2,10 @@ CSDB=The C-64 Scene Database
 CODEBASE64=Codebase 64
 REMIX_KWED_ORG=Remix.Kwed.Org
 SID_OTH4_COM=Sid.Oth4.Com
+C64_SK=C64.sk
+FORUM64_DE=Forum64.De
+LEMON64_COM=Lemon64.Com
+JSIDPLAY2=JSIDPlay2 Sourcecode
 TIP_SHOW_TUNE_INFOS=Show Tune Infos on download
 TIP_BACKWARD=Back
 TIP_RELOAD=Reload
