--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
@@ -91,11 +91,10 @@ UNINSTALL_JIFFYDOS=Uninstall JiffyDos
 CHOOSE_C64_KERNAL_ROM=Choose C64 Kernal ROM
 CHOOSE_C1541_KERNAL_ROM=Choose C1541 Kernal ROM
 
-CONFIGURATION=_Configuration
-IMPORT=_Import
-EXPORT=_Export
-IMPORT_CONFIGURATION=Import Configuration
-PLEASE_RESTART=The changes take effect after JSIPlay2 will be restarted!\n Continue to Import?
+IMPORT=_Load
+EXPORT=_Save
+IMPORT_CONFIGURATION=Load Configuration
+PLEASE_RESTART=The changes take effect after restart!\n Continue to load?
 
 HELP=_Help
 ABOUT=About
