--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
@@ -152,4 +152,4 @@ SID_OTH4_COM=Sid.Oth4.Com
 C64_SK=C64.sk
 FORUM64_DE=Forum64.De
 LEMON64_COM=Lemon64.Com
-JSIDPLAY2=JSIDPlay2 Sourcecode
+JSIDPLAY2=JSIDPlay2 Source Code
