--- a/trunk/jsidplay2/pom.xml
+++ b/trunk/jsidplay2/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>jsidplay2</groupId>
 	<artifactId>jsidplay2</artifactId>
-	<version>3.2</version>
+	<version>3.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>jsidplay2</name>
