--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -86,6 +86,8 @@ Char Junction Left='+'
 Char Junction Right='+'
 
 [Audio]
+; Supported SID driver to play SID music (e.g. /libsidplay/sidtune/psiddriver.asm, /libsidplay/sidtune/psiddriver_vice.asm)
+SIDDriver=/libsidplay/sidtune/psiddriver.asm
 ; Allows overriding of the default playback/record frequency. The frequency must be provided in Hertz (Hz) and by default it is set to 44100.
 Frequency=48000
 ; Sampling method in use
