--- a/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/JSidPlay2.properties
@@ -97,6 +97,7 @@ IMPORT_CONFIGURATION=Load Configuration
 PLEASE_RESTART=The changes take effect after restart!\n Continue to load?
 
 HELP=_Help
+CHECK_FOR_UPDATES=Check For Updates
 ABOUT=About
 
 6581=6581:
